--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -119,7 +119,7 @@ body {
 
 
 .simditor-body img {
-    max-width:100%;
+    max-width: 100%;
 }
 
 
@@ -137,5 +137,18 @@ body {
             font-size: 28px;
             line-height: 38px;
         }
+    }
+}
+
+/* 回复列表 */
+
+.topic-reply {
+    a {
+        color: inherit;
+    }
+
+    .meta {
+        font-size: .9em;
+        color: #b3b3b3;
     }
 }
